5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1636_2450.log
== TEST (2019-04-10 14:27:28) 
-- CODE:
a = input("Nome 1: ")
b = input("Nome 2: ")

if(a.upper()[0] > b.upper()[0]):
	print(b)
	print(a)
else:
	print(a)
	print(b)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:27:56) 
-- CODE:
a = input("Nome 1: ")
b = input("Nome 2: ")

if(a.upper()[0] > b.upper()[0]):
	print(b)
	print(a)
else:
	print(a)
	print(b)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:37:29) 
-- CODE:
a = input("Nome 1: ")
b = input("Nome 2: ")

contador = 0

if(a.upper()[contador] == b.upper()[contador]):
	while(a.upper()[contador] == b.upper()[contador]):
		contador++
		
	f(a.upper()[contador] > b.upper()[contador]):
		print(b)
		print(a)
	else:
		print(a)
		print(b)
else:
	if(a.upper()[0] > b.upper()[0]):
		print(b)
		print(a)
	else:
		print(a)
		print(b)
-- ERROR:
File "XXXX", line 8
    contador++
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 12:22:17) 
-- CODE:
a = input("Nome 1: ")
b = input("Nome 2: ")

contador = 0

if(a.upper()[contador] == b.upper()[contador]):
	while(a.upper()[contador] == b.upper()[contador]):
		contador = contador + 1
		
	f(a.upper()[contador] > b.upper()[contador]):
		print(b)
		print(a)
	else:
		print(a)
		print(b)
else:
	if(a.upper()[0] > b.upper()[0]):
		print(b)
		print(a)
	else:
		print(a)
		print(b)
-- EXECUTION TIME:
0.156285
-- ERROR:
  File "/home/codebench/codes/1636/2450/main.py", line 10
    f(a.upper()[contador] > b.upper()[contador]):
                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 12:31:17) 
-- CODE:
a = input("Nome 1: ")
b = input("Nome 2: ")

contador = 0

if(a.upper()[contador] == b.upper()[contador]):
	while(a.upper()[contador] == b.upper()[contador]):
		contador = contador + 1
		
	f(a.upper()[contador] > b.upper()[contador]):
		print(b)
		print(a)
	else:
		print(a)
		print(b)
else:
	if(a.upper()[0] > b.upper()[0]):
		print(b)
		print(a)
	else:
		print(a)
		print(b)
-- EXECUTION TIME:
0.187194
-- ERROR:
  File "/home/codebench/codes/1636/2450/main.py", line 10
    f(a.upper()[contador] > b.upper()[contador]):
                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 12:31:42) 
-- CODE:
a = input("Nome 1: ")
b = input("Nome 2: ")

contador = 0

if(a.upper()[contador] == b.upper()[contador]):
	while(a.upper()[contador] == b.upper()[contador]):
		contador = contador + 1
		
	if(a.upper()[contador] > b.upper()[contador]):
		print(b)
		print(a)
	else:
		print(a)
		print(b)
else:
	if(a.upper()[0] > b.upper()[0]):
		print(b)
		print(a)
	else:
		print(a)
		print(b)
-- EXECUTION TIME:
0.129302
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
